--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
     "@testing-library/user-event": "^13.2.1",
     "@types/jest": "^27.0.1",
     "@types/node": "^16.7.13",
+    "@types/qrcode": "^1.4.2",
     "@types/react": "^17.0.20",
     "@types/react-dom": "^17.0.9",
+    "normalize.css": "^8.0.1",
+    "qrcode": "^1.5.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.2.1",
