--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "@types/qrcode": "^1.4.2",
     "@types/react": "^17.0.20",
     "@types/react-dom": "^17.0.9",
+    "core-js": "2",
+    "dotenv": "^14.3.2",
     "normalize.css": "^8.0.1",
     "qrcode": "^1.5.0",
     "react": "^17.0.2",
