--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,6 +7,11 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    env:
+      REACT_APP_BEE_API: https://api.gateway.ethswarm.org
+      REACT_APP_BEE_DEBUG_API: https://api.gateway.ethswarm.org
+      REACT_APP_BEE_GATEWAY_MODE: true
+
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
